work on Cartesian Plane project