@@ -14,21 +14,23 @@ import java.io.PrintWriter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Random;
+import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
 
-class CommandReaderTest
+public class CommandReaderTest
 {
     /**
      * Defines a functional interface
      * that accepts a command of type BufferedReader
      * and returns nothing.
      * This is essentially a Consumer<BufferedReader>
-     * except that the abstract method, accept
+     * except that the abstract method, accept,
      * may throw an IOException.
      * 
      * @author Jack Straub
@@ -48,11 +50,13 @@ class CommandReaderTest
             throws IOException;
     }
     
-    private static final String randStr     =
+    private final PrintStream   saveOut     = System.out;
+    
+    private final String        randStr     =
         "abc def g h ijk l mnopqr st uvw xyz " +
         "ABC DEF G H IJK L MNOPQR ST UVW XYZ";
-    private static final int    randStrLen  = randStr.length();
-    private static Random       randy;
+    private final int           randStrLen  = randStr.length();
+    private final Random        randy       = new Random( 0 );
     
     private List<ParsedCommand> expResults;
     private List<ParsedCommand> actResults;
@@ -62,7 +66,13 @@ class CommandReaderTest
     {
         expResults = new ArrayList<>();
         actResults = new ArrayList<>();
-        randy = new Random( 0 );
+        randy.setSeed( 0 );
+    }
+    
+    @AfterEach
+    public void afterEach()
+    {
+        System.setOut( saveOut );
     }
     
     /**
@@ -73,7 +83,7 @@ class CommandReaderTest
     {
         List<String>    input   = 
             Stream.of( Command.END, Command.EXIT, Command.STEP )
-                .map( c -> getExpResult( c, "", true ) )
+                .map( c -> addExpResult( c, "" ) )
                 .map( p -> p.getCommandString() )
                 .toList();
         ioTest( input, this::testSimpleCommand );
@@ -87,61 +97,34 @@ class CommandReaderTest
     {
         List<String>    input   = 
             Stream.of( Command.END, Command.EXIT, Command.STEP )
-                .map( c -> getExpResult( c, getArg(), true ) )
+                .map( c -> addExpResult( c, getArg() ) )
+                .map( p -> p.getCommandString() + " " + p.getArgString() )
+                .collect( Collectors.toList() );
+        ioTest( input, this::testSimpleCommand );
+    }
+    
+    /**
+     * Parse lines of the form "str arg" 
+     * where str is the shortcut for a command.
+     */
+    @Test
+    public void testShortcuts()
+    {
+        expResults.add( new ParsedCommand( Command.XEQUALS, "x=", "xxx" ) );
+        expResults.add( new ParsedCommand( Command.YEQUALS, "y=", "yyy" ) );
+        expResults.add( new ParsedCommand( Command.TEQUALS, "t=", "ttt" ) );
+        expResults.add( new ParsedCommand( Command.REQUALS, "r=", "rrr" ) );
+        expResults.add( new ParsedCommand( Command.XEQUALS, "X=", "XXX" ) );
+        expResults.add( new ParsedCommand( Command.YEQUALS, "Y=", "YYY" ) );
+        expResults.add( new ParsedCommand( Command.TEQUALS, "T=", "TTT" ) );
+        expResults.add( new ParsedCommand( Command.REQUALS, "R=", "RRR" ) );
+        List<String>    input   = 
+            expResults.stream()
                 .map( p -> p.getCommandString() + " " + p.getArgString() )
                 .toList();
         ioTest( input, this::testSimpleCommand );
     }
     
-    /**
-     * Test valid shortcuts,
-     * with no extra whitespace.
-     */
-    @Test
-    public void testShortcutNoSpace()
-    {
-        List<String>    input           = 
-            List.of( "x=xxx", "X=xxx", "y=xxx", "Y=xxx" );
-        expResults.add( new ParsedCommand( Command.XEQUALS, "x=", "xxx" ) );
-        expResults.add( new ParsedCommand( Command.XEQUALS, "X=", "xxx" ) );
-        expResults.add( new ParsedCommand( Command.YEQUALS, "y=", "xxx" ) );
-        expResults.add( new ParsedCommand( Command.YEQUALS, "Y=", "xxx" ) );
-        ioTest( input, this::testSimpleCommand );
-    }
-
-    /**
-     * Test shortcuts of the form "x=".
-     * Try instances with generously distributed whitespace,
-     * with nothing to the right of the equal sign, etc.
-     * Try an invalid shortcut, such as "z=y".
-     */
-    @Test
-    public void testShortcuts()
-    {
-        List<String>        input       = List.of(
-            "x= xxx",
-            "y= yyy",
-            "X= XXX",
-            "Y= YYY",
-            "Y=  YYY",          // extra space between shortcut and arg
-            "  Y=   YYY   ",    // leading/trailing whitespace on the line
-            "x=",               // shortcut with empty arg
-            "z= YYY"            // z= is not a shortcut
-        );
-        List<ParsedCommand> expected    = List.of(
-            new ParsedCommand( Command.XEQUALS, "x=", "xxx" ),
-            new ParsedCommand( Command.YEQUALS, "y=", "yyy" ),
-            new ParsedCommand( Command.XEQUALS, "X=", "XXX" ),
-            new ParsedCommand( Command.YEQUALS, "Y=", "YYY" ),
-            new ParsedCommand( Command.YEQUALS, "Y=", "YYY" ),
-            new ParsedCommand( Command.YEQUALS, "Y=", "YYY" ),
-            new ParsedCommand( Command.XEQUALS, "x=", "" ),
-            new ParsedCommand( Command.INVALID, "z=", "YYY" )
-        );
-        expResults.addAll( expected );
-        ioTest( input, this::testSimpleCommand );
-    }
-
     /**
      * Parse lines of the form " command  arg " 
      * with leading and trailing, and with extra whitespace
@@ -152,7 +135,7 @@ class CommandReaderTest
     {
         List<String>    input   = 
             Stream.of( Command.END, Command.EXIT, Command.STEP )
-                .map( c -> getExpResult( c, getArg(), true ) )
+                .map( c -> addExpResult( c, getArg() ) )
                 .map( p -> 
                     "   " + p.getCommandString() + 
                     "   " + p.getArgString() +
@@ -168,16 +151,36 @@ class CommandReaderTest
     @Test
     public void testEmptyLinesAndComments()
     {
+        // Test input consisting of only empty lines and comments. 
         List<String>    input   = 
             Stream.of( 
                 "",
                 "     ",
                 "#",
-                "     #     ",
-                " # this is a comment"
+                "     #     "
                 )
-            .toList();
-        ioTest( input, this::testSimpleCommand );
+                .collect( Collectors.toList() );
+        ioTest( input, this::testEmptyLinesAndComments );
+    }
+    
+    private void testSimpleCommand( BufferedReader reader ) 
+        throws IOException
+    {
+        CommandReader cmdReader = new CommandReader( reader );
+        ParsedCommand command   = cmdReader.nextCommand( null );
+        while ( command.getCommand() != Command.NONE )
+        {
+            actResults.add( command );
+            command = cmdReader.nextCommand( null );
+        }
+        assertEquals( expResults, actResults );
+    }
+    
+    private void testEmptyLinesAndComments( BufferedReader reader ) throws IOException
+    {
+        CommandReader   cmdReader   = new CommandReader( reader );
+        ParsedCommand   command     = cmdReader.nextCommand( null );
+        assertEquals( Command.NONE, command.getCommand() );
     }
     
     /**
@@ -189,7 +192,7 @@ class CommandReaderTest
         ioTest( new ArrayList<String>(), this::testEmptyInputStream );
     }
     
-    private void testEmptyInputStream( BufferedReader reader )
+    private void testEmptyInputStream( BufferedReader reader ) 
         throws IOException
     {
         CommandReader   cmdReader   = new CommandReader( reader );
@@ -198,7 +201,7 @@ class CommandReaderTest
     }
     
     /**
-     * Test a mixture of lines 
+     * Test a mixture lines 
      * representing concrete, valid commands 
      * with lines containing empty strings,
      * comments and invalid commands.
@@ -207,20 +210,19 @@ class CommandReaderTest
     public void testMixAndMatch()
     {
         // Mix lines representing concrete, valid commands with lines
-        // representing comments, empty lines and invalid arguments.
+        // representing comments, empty lines and invalid commands.
         List<String>    input   = 
             Stream.of( Command.END, Command.EXIT, Command.STEP )
-                .map( c -> getExpResult( c, getArg(), true ) )
+                .map( c -> addExpResult( c, getArg() ) )
                 .map( p -> p.getCommandString() + " " + p.getArgString() )
                 .flatMap( s ->
                     Stream.of( s, "", "#", "  #  ", "$BadCommand" )
                 )
-                .toList();
+                .collect( Collectors.toList() );
         ioTest( input, this::testMixAndMatch );
     }
     
-    private void testMixAndMatch( BufferedReader reader ) 
-        throws IOException
+    private void testMixAndMatch( BufferedReader reader ) throws IOException
     {
         CommandReader   cmdReader   = new CommandReader( reader );
         ParsedCommand   command     = cmdReader.nextCommand( null );
@@ -233,6 +235,11 @@ class CommandReaderTest
         assertEquals( expResults, actResults );
     }
 
+    /**
+     * Feed some valid commands to CommandReader
+     * and make sure that the stream method
+     * processes them all.
+     */
     @Test
     public void testStream()
     {
@@ -247,65 +254,64 @@ class CommandReaderTest
         
         // Mix lines representing concrete, valid commands with lines
         // representing comments and empty lines.
-        // Don't add NONE command to input; this is produced automatically
-        // by CommandReader.stream().
         List<String>    input   = 
             expResults.stream()
-                .map( pc -> 
-                    "  " + pc.getCommandString() 
-                    + "   " + pc.getArgString() 
-                    + "   "
-                )
+                .map( pc -> "  " + pc.getCommandString() + "   " + pc.getArgString() + "   " )
                 .flatMap( s ->
                     Stream.of( s, "", "#", "  #  " )
                 )
-                .toList();
-        ioTest( input, this::readStream );
-    }
-
-    @Test
-    public void testEmptyStream()
-    {
-        ioTest( new ArrayList<String>(), this::readStream );
+                .collect( Collectors.toList() );
+        ioTest( input, this::testStream );
     }
 
     /**
-     * Verify that nextCommand writes the given prompt to stdout
-     * each time it reads a line from its source.
+     * Feed some valid and some invalid commands to
+     * CommandReader, and verify that the stream() method
+     * processes them correctly.
      */
     @Test
-    public void testNextCommandWithPrompt()
+    public void testStreamWithInvalidCommands()
     {
-        List<String>    input   = List.of( "", "# comment", "end" );
-        ioTest( input, this::readWithPrompt );
-    }
-
-    private void readWithPrompt( BufferedReader reader ) throws IOException
-    {
-        final String            prompt      = "cmd> ";
-        PrintStream             saveOut     = System.out;
+        expResults =
+            List.of( 
+                new ParsedCommand( Command.END, "end", "endarg" ),
+                new ParsedCommand( Command.INVALID, "eh", "ehArg" ),
+                new ParsedCommand( Command.START, "start", "startarg" ),
+                new ParsedCommand( Command.INVALID, "mmm", "" ),
+                new ParsedCommand( Command.STEP, "step", "steparg" ),
+                new ParsedCommand( Command.EQUATION, "equation", "" ),
+                new ParsedCommand( Command.INVALID, "uhoh", "a" ),
+                new ParsedCommand( Command.YPLOT, "yplot", "" )
+            );
         
-        try ( 
-            ByteArrayOutputStream baos = new ByteArrayOutputStream();
-            PrintStream newOut = new PrintStream( baos );
-        )
-        {
-            System.setOut( newOut );
-            CommandReader   cmdReader   = new CommandReader( reader );
-            ParsedCommand   command     = cmdReader.nextCommand( prompt );
-            assertEquals( Command.END, command.getCommand() );
-
-            // Prompt is written once per readLine attempt, so the two
-            // skipped lines (blank, comment) plus the "end" line produce
-            // three prompts.
-            assertEquals( prompt + prompt + prompt, baos.toString() );
-        }
-        finally
-        {
-            System.setOut( saveOut );
-        }
+        // Mix lines representing concrete, valid commands with lines
+        // representing comments and empty lines.
+        List<String>    input   = 
+            expResults.stream()
+                .map( pc -> "  " + pc.getCommandString() + "   " + pc.getArgString() + "   " )
+                .flatMap( s ->
+                    Stream.of( s, "", "#", "  #  " )
+                )
+                .collect( Collectors.toList() );
+        ioTest( input, this::testStream );
     }
 
+    /**
+     * Feed the CommandReader an empty list of lines to process,
+     * make sure it doesn't break the stream
+     */
+    @Test
+    public void testEmptyStream()
+    {
+        ioTest( new ArrayList<String>(), this::testStream );
+    }
+    
+    /**
+     * Test parser with valid commands
+     * that have no intrinsic arguments.
+     * 
+     * @param str   value-source parameter
+     */
     @ParameterizedTest
     @ValueSource( strings = {"END", "SET", "START"} )
     public void testParseCommandStringWithArg( String str )
@@ -321,6 +327,12 @@ class CommandReaderTest
         assertEquals( arg, parsed.getArgString() );
     }
     
+    /**
+     * Test parser with valid commands
+     * of the form "command argument"
+     * 
+     * @param str   value-source parameter
+     */
     @ParameterizedTest
     @ValueSource( strings = {"END", "SET", "START"} )
     public void testParseCommandStringWithoutArg( String str )
@@ -334,11 +346,66 @@ class CommandReaderTest
         assertTrue( parsed.getArgString().isEmpty() );
     }
     
+    /**
+     * Test parser using commands with liberal whitespace,
+     * include whitespace in the argument.
+     */
+    @Test
+    public void testParseCommandStringWithArgWhiteSpace()
+    {
+        // One more test with: a) liberal whitespace including tabs, and
+        // b) an argument containing spaces
+        Command         expCommand      = Command.SET;
+        String          expCommandStr   = expCommand.toString();
+        String          expArg          = "a  b\t\tc";
+        String          line            =
+            "\t\t " + expCommandStr + "\t\t " + expArg + " \t\t";
+        ParsedCommand   parsed      = CommandReader.parseCommand( line );
+
+        assertEquals( expCommand, parsed.getCommand() );
+        assertEquals( expCommandStr, parsed.getCommandString() );
+        assertEquals( expArg, parsed.getArgString() );
+    }
+    
+    /**
+     * Make sure parser returns NONE 
+     * for null and empty lines.
+     */
+    @Test
+    public void testParseCommandStringNone()
+    {
+        // Can't be a parameterized test because @ValueSource
+        // won't allow null.
+        String[]        vals        = 
+        { 
+            null,         // null string
+            "",           // empty string
+            "    ",       // blank string
+        };
+        for ( String line : vals )
+        {
+            String          feedback    = "\"" + line + "\"";
+            ParsedCommand   parsed      = CommandReader.parseCommand( line );
+            assertEquals( Command.NONE, parsed.getCommand(), feedback );
+        }
+    }
+    
+    private void testStream( BufferedReader reader ) throws IOException
+    {
+        CommandReader   cmdReader   = new CommandReader( reader );
+        actResults = cmdReader.stream().collect( Collectors.toList() );
+        assertEquals( expResults, actResults );
+    }
+    
+    /**
+     * Make sure parser returns INVALID 
+     * for unrecognized command strings.
+     */
     @ParameterizedTest
     @ValueSource( strings = {"bad1", "bad2", "bad3"} )
-    public void 
-    testParseCommandStringInvalidCommandWithArg( String commandStr )
+    public void testParseCommandStringInvalidCommand( String commandStr )
     {
+        // With argument
         String          arg         = "argument";
         String          line        = commandStr + "  " + arg;
         ParsedCommand   parsed      = CommandReader.parseCommand( line );
@@ -346,40 +413,60 @@ class CommandReaderTest
         assertEquals( Command.INVALID, parsed.getCommand() );
         assertEquals( commandStr, parsed.getCommandString() );
         assertEquals( arg, parsed.getArgString() );
-    }
-    
-    @ParameterizedTest
-    @ValueSource( strings = {"bad1", "bad2", "bad3"} )
-    public void 
-    testParseCommandStringInvalidCommandWithoutArg( String commandStr )
-    {
-        ParsedCommand   parsed = CommandReader.parseCommand( commandStr );
+        
+        // Without argument
+        parsed = CommandReader.parseCommand( commandStr );
         
         assertEquals( Command.INVALID, parsed.getCommand() );
         assertEquals( commandStr, parsed.getCommandString() );
         assertTrue( parsed.getArgString().isEmpty() );
     }
     
-    private void readStream( BufferedReader reader ) throws IOException
+    /**
+     * Test nextCommand; incorporates tests
+     * with and without prompts.
+     */
+    @Test
+    public void testPrompt()
     {
-        CommandReader   cmdReader   = new CommandReader( reader );
-        actResults = cmdReader.stream().toList();
-        assertEquals( expResults, actResults );
+        Command         command     = Command.START;
+        String          arg         = "argument";
+        List<String>    input       = List.of( command + "  " + arg );
+        ioTest( input, this::testPrompt );
+        ioTest( input, this::testNoPrompt );
     }
     
-    private void
-    testSimpleCommand( BufferedReader reader ) throws IOException
+    private void testPrompt( BufferedReader reader )
+        throws IOException
     {
+        ByteArrayOutputStream   outStr  = new ByteArrayOutputStream();
+        PrintStream             tempOut = new PrintStream( outStr );
+        System.setOut( tempOut );
+        
+        String          expOut      = "prompt";
         CommandReader   cmdReader   = new CommandReader( reader );
-        ParsedCommand   command     = cmdReader.nextCommand( null );
-        while ( command.getCommand() != Command.NONE )
-        {
-            actResults.add( command );
-            command = cmdReader.nextCommand( null );
-        }
-        assertEquals( expResults, actResults );
+        cmdReader.nextCommand( expOut );
+        outStr.close();
+        tempOut.close();
+        String          actOut      = outStr.toString();
+        assertEquals( expOut, actOut );
     }
-
+    
+    private void testNoPrompt( BufferedReader reader )
+        throws IOException
+    {
+        ByteArrayOutputStream   outStr  = new ByteArrayOutputStream();
+        PrintStream             tempOut = new PrintStream( outStr );
+        System.setOut( tempOut );
+        
+        CommandReader   cmdReader   = new CommandReader( reader );
+        cmdReader.nextCommand( null );
+        outStr.close();
+        tempOut.close();
+        String          actOut      = outStr.toString();
+        assertTrue( actOut.isEmpty() );
+    }
+    
     /**
      * Writes each string in a list into a byte buffer.
      * Each string is terminated with a line separator.
@@ -398,12 +485,12 @@ class CommandReaderTest
      * @see #ioTest(byte[], IOConsumer)
      * @see #ioTest(List, IOConsumer)
      */
-    private static byte[] getByteBuffer( List<String> list )
+    private byte[] getByteBuffer( List<String> list )
     {
         byte[]  bytes   = null;
         try (
-            ByteArrayOutputStream   baoStream   = new ByteArrayOutputStream();
-            PrintWriter             writer      = new PrintWriter( baoStream );
+            ByteArrayOutputStream baoStream = new ByteArrayOutputStream();
+            PrintWriter writer = new PrintWriter( baoStream );
         )
         {
             list.forEach( writer::println );
@@ -412,32 +499,15 @@ class CommandReaderTest
         }
         catch ( IOException exc )
         {
-            exc.printStackTrace();
-            System.exit( 1 );
+            fail( "Unexpected I/O error", exc );
         }
         return bytes; 
     }
     
     /**
      * Generates sample input from a list
-     * in the form of a BufferedReader.
-     * Uses the Buffered reader
-     * to execute a given consumer.
-     * 
-     * @param list      the list to convert to input
-     * @param tester    the given consumer
-     * 
-     * @see #getByteBuffer(List)
-     * @see #ioTest(byte[], IOConsumer)
-     */
-    private static void ioTest( List<String> list, IOConsumer tester )
-    {
-        byte[]  bytes   = getByteBuffer( list );
-        ioTest( bytes, tester );
-    }
-        
-    /**
-     * Transforms a byte buffer into an input stream
+     * in the form of a byte array.
+     * Transforms a byte array into an input stream
      * in the form of a BufferedReader.
      * The byte buffer is assumed to contain
      * only valid Unicode characters,
@@ -446,14 +516,14 @@ class CommandReaderTest
      * Uses the Buffered reader
      * to execute a given consumer.
      * 
-     * @param buff      the source byte buffer
+     * @param list      list of strings to store in byte buffer
      * @param tester    the given consumer
      * 
      * @see #getByteBuffer(List)
-     * @see #ioTest(List, IOConsumer)
      */
-    private static void ioTest( byte[] buff, IOConsumer tester )
+    private void ioTest( List<String> list, IOConsumer tester )
     {
+        byte[]  buff    = getByteBuffer( list );
         try (
             ByteArrayInputStream baiStream = new ByteArrayInputStream( buff );
             InputStreamReader strReader = new InputStreamReader( baiStream );
@@ -474,10 +544,10 @@ class CommandReaderTest
      * 
      * @return  string of random alphanumeric characters
      */
-    private static String getArg()
+    private String getArg()
     {
         int     start   = randy.nextInt( randStrLen - 5 );
-        int     end     = randy.nextInt( randStrLen - start ) + start + 1;
+        int     end     = randy.nextInt( randStrLen - start ) + start;
         String  arg     = randStr.substring( start, end );
         return arg;
     }
@@ -486,27 +556,19 @@ class CommandReaderTest
      * Given a command and an argument,
      * create a ParsedCommand object
      * reflecting the given data.
-     * The arg argument may never be null.
-     * To indicate that no arg is to be used,
-     * pass the empty string. 
-     * The generated object is returned,
-     * and optionally added
-     * to the "expected results" list.
+     * The generated object is added to the expResults list
+     * and returned.
      * 
      * @param cmd           the given command
      * @param arg           the given argument
-     * @param addToExpList  true to add the generated object
-     *                      to the "expected results" list
      *                      
      * @return  the generated object
      */
-    private ParsedCommand 
-    getExpResult( Command cmd, String arg, boolean addToExpList )
+    private ParsedCommand addExpResult( Command cmd, String arg )
     {
         ParsedCommand   pCmd    =
             new ParsedCommand( cmd, cmd.name(), arg.trim() );
-        if ( addToExpList )
-            expResults.add( pCmd );
+        expResults.add( pCmd );
         return pCmd;
     }
 }
